--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Elektro repair Mortsel",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.0"
+    "@astrojs/tailwind": "^4.0.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "astro": "^2.9.0",
+    "astro-icon": "^0.8.1",
+    "sass": "^1.64.0",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
