--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "astro": "^2.9.0",
     "astro-icon": "^0.8.1",
+    "astro-relative-links": "^0.3.4",
     "sass": "^1.64.0",
     "tailwindcss": "^3.3.3"
   },
